--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  background-image: url('https://www.w3schools.com/html/img_girl.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
+</style>
+</head>
+<body>
+
 Bienvenue
 
 <h1> Première Activité </h1>
@@ -10,3 +24,5 @@ Bienvenue
    <li> Exerice A </li>
    <li> Exrcice B </li>
 </ol>
+</body>
+</html>
